fix: skaffolding dev environment

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="description" content="Information about BCIT's LTC Course Production Team." />
         <meta name="author" content="LTC Course Production" />
-        <title>LTC Course Production - Home</title>
+        <title>LTC Course Productionr - Home</title>
         <link rel="stylesheet" href="https://sugar-suite.ltc.bcit.ca/css/bcit.css" />
         <link rel="stylesheet" href="./css/styles.css" />
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
