fix: remove production board and fix footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="description" content="Information about BCIT's LTC Course Production Team." />
         <meta name="author" content="LTC Course Production" />
-        <title>LTC Course Productionr - Home</title>
+        <title>LTC Course Production - Home</title>
         <link rel="stylesheet" href="https://sugar-suite.ltc.bcit.ca/css/bcit.css" />
         <link rel="stylesheet" href="./css/styles.css" />
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -65,7 +65,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Links <i class="fa fa-caret-down"></i></button>
                         <div class="dropdown-content">
-                            <a href="https://bcit-ltc.github.io/module-estimator/" target="_blank">Module Estimator</a>
+                            <a href="https://module-estimator.ltc.bcit.ca/" target="_blank">Module Estimator</a>
                             <a href="https://bcit-ltc.github.io/course-production-screencasts/teamwork-uploading-files.mp4" target="_blank">Uploading files to Teamwork</a>
                             <a href="https://bcit-ltc.github.io/courseproduction-presentation/#/" target="_blank">Presentation</a>
                             <a href="./qa-checklist.md" target="_blank">QA Checklist</a>
@@ -85,11 +85,11 @@
                 <p>See our <a href="https://bcit-ltc.github.io/courseproduction-presentation/#/">presentation</a> about why we standardized this process and our <a href="https://conversion-guide.ltc.bcit.ca" target="_blank">Conversion Guide</a> for information about how to prepare Word documents. There are also steps about <a href="./pages/teamwork-steps.html">the best way to use our project management platform</a>, Teamwork.</p>
                 <p>If you have feedback, we'd love to <a href="mailto:courseproduction@bcit.ca">hear from you</a>.</p>
             </section>
-            <section id="tempQueue">
+            <!-- <section id="tempQueue">
                 <h2>The Production Board</h2>
                 <p>The Production Board shows all the projects currently in production. Projects are split up into tasks/modules and each task moves through a series of queues within the course production process – e.g. the Estimating Queue, Building Queue, and Quality Assurance (QA) Queue. Generally the tasks are developed in the order received although time sensitive projects can be prioritized.</p>
                 <p>The Production Board is located on the second floor of the Learning and Teaching Centre (LTC). It is a visual representation of all the tasks that are in our estimation, build, quality assurance (QA), and urgent queues as well as any courses that are on our radar for future production.</p>
-            </section>
+            </section> -->
 
         </div>
         <!-- /container -->
